# ChangeLog for net-misc/mknbi
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/mknbi/ChangeLog,v 1.21 2008/08/31 04:36:02 mr_bones_ Exp $

  31 Aug 2008; Michael Sterrett <mr_bones_@gentoo.org> mknbi-1.4.4.ebuild:
  fix bug #221449 and tidy ebuild

  31 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org> -mknbi-1.4.3.ebuild:
  clean older ebuild

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> mknbi-1.4.3.ebuild,
  mknbi-1.4.4.ebuild:
  (QA) RESTRICT clean up.

  06 Apr 2007; Christian Faulhammer <opfer@gentoo.org> mknbi-1.4.4.ebuild:
  stable x86, bug 173473

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  17 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +files/mknbi-1.4.4-gcc4.patch, mknbi-1.4.4.ebuild:
  Add patch to fix compilation under gcc-4; thanks to Phillip Lemon for the
  patch; bug 148091

  09 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  -mknbi-1.2.11.ebuild, -mknbi-1.2.12.ebuild, -mknbi-1.4.0.ebuild,
  -mknbi-1.4.1.ebuild, mknbi-1.4.4.ebuild:
  Remove old versions, add blocker with sys-boot/netboot

*mknbi-1.4.4 (25 Nov 2005)

  25 Nov 2005; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,
  +mknbi-1.4.4.ebuild:
  1.4.4 version bump for bug 112724. Thanks to Daniel Webert <rockoo at gmail
  dot com>.

  30 May 2005; Danny van Dyk <kugelfang@gentoo.org> mknbi-1.4.3.ebuild:
  Fixed deprecated usage of gcc.eclass. (BUG #92745)

  17 Apr 2005; <solar@gentoo.org> +files/mknbi-1.4.3-nossp.patch,
  mknbi-1.4.3.ebuild:
  - corrected compile problems when using pie or ssp while building this package

  23 Sep 2004; Karol Wojtaszek <sekretarz@gentoo.org> mknbi-1.4.3.ebuild:
  Fixed gcc-3.4 compile issues. Thanks to Mark Loeser <halcyon@whiterapid.com>
  in Bug 64049

  25 Apr 2004; Jon Hood <squinky86@gentoo.org> mknbi-1.4.0.ebuild,
  mknbi-1.4.1.ebuild, mknbi-1.4.3.ebuild:
  added "die"
