@@ -1,6 +1,6 @@
 AUX mknbi-1.4.3-nossp.patch 511 RMD160 8f9e6b565eefd549308395754e0dac072bc93393 SHA1 85462f4179a9f90a82e3eff9861eb8cd6bd8bdab SHA256 03a92c036fbaa8607b5d7bd3d2d0f8d2bf5c42118f8abf79c4502508b96b4fc7
 AUX mknbi-1.4.4-gcc4.patch 1065 RMD160 6515339316ecc6bdf8048c2b8c31265c4fe213f1 SHA1 4c5f21e1388012a8e492483d6a16c34f698bbcc9 SHA256 19c199a163b8cf67a7cad992dc75568449050fbde7e625b0a86bef648b6aa48d
 DIST mknbi-1.4.4.tar.gz 212454 RMD160 05c8ea64b57d83c7028a613cb64b12c0481c1462 SHA1 dc5d2c33d3b0bd133a27cc1b4995a0cbbd38f812 SHA256 e5c62131a79cebf31234af252975d4c242ed8face0249f11a5772aeff50e3f02
-EBUILD mknbi-1.4.4.ebuild 1332 RMD160 4767595b77c4e9f004109c18dfc7854093769876 SHA1 0bf94fb8ff93a5ae5c25c00fb0ff136806542938 SHA256 fd88d6bc8aa4db9584b66fc0ab837c6c20eb2de7b853ea2ce791f22a13132c75
-MISC ChangeLog 2952 RMD160 3a700d36e5bae511ccf4e800d7409ea780011a90 SHA1 3c3323ce8af83626326647b058b0ebdbb6efe2bb SHA256 b5d68a9cbcd9d423d017e389e28e81b1ce9a867c19698d1f7df05ea88e394615
+EBUILD mknbi-1.4.4.ebuild 1396 RMD160 7cea8df20a40c8a778aea732f23e5e23c0294e6d SHA1 1dd411b07387a5541e735cd76849b184c50c1a8c SHA256 e5a48b5a3d8f5da4ee1afae87b421200824261dc0f2d665837b41aa179cc3769
+MISC ChangeLog 3094 RMD160 a0adaaf17e7bb8e0c741e791aa7d6da34c6199c9 SHA1 7727ac4e6e795b4c1f96584196527900bd3f251f SHA256 b31aefa3ac72a033481f8d8fabf3b2bb7b2027949d31a9c8434d17ffa76d6261
 MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
